fix: correct brush icon alignment in mac

--- a/src/domains/brush/components/BrushTool.module.css
+++ b/src/domains/brush/components/BrushTool.module.css
@@ -5,6 +5,10 @@
 }
 
 .brush {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   user-select: none;
   box-sizing: border-box;
   border: 1px solid black;
